Revamp the resume entirely

--- a/columns/left.tex
+++ b/columns/left.tex
@@ -1,4 +1,3 @@
 \input{sections/about.tex}
-\input{sections/interests.tex}
 \input{sections/education.tex}
-\input{sections/experience.tex}
+\input{sections/projects.tex}
