--- a/columns/right.tex
+++ b/columns/right.tex
@@ -1,7 +1,2 @@
+\input{sections/experience.tex}
 \input{sections/skills.tex}
-\input{sections/opensource.tex}
-\if\docoriented1
-  \input{sections/writings.tex}
-\else
-  \input{sections/projects.tex}
-\fi
