--- a/parts/resume.tex
+++ b/parts/resume.tex
@@ -1,6 +1,8 @@
 % For another similar setup, see cover.tex
+\formatresumesections
 \begin{multicols}{2}[]
+  \invisiblepart{Resume}
   \input{columns/left.tex}
   \columnbreak
-  \input{columns/right.tex}  
+  \input{columns/right.tex}
 \end{multicols}
