--- a/sections/about.tex
+++ b/sections/about.tex
@@ -2,21 +2,11 @@
 \name{https://dhruvkb.github.io/}{Dhruv Bhanushali}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-{\noindent\large I am a
-\if\docoriented1%
-  {\textcolor{cyan}{\jetbrainsmono\textbf{technical writer.}}}
-\else%
-  {\textcolor{blue}{\jetbrainsmono\textbf{software developer.}}}
-\fi
+\raggedright{I am a \textcolor{orange}{\jetbrainsmono software developer}.}
 \vspace{2mm}
-}
 
-\noindent\intro
-{\href{mailto:dhruvkb@ph.iitr.ac.in}
-{\textcolor{secondary}{\iconEmail}~dhruvkb@ph.iitr.ac.in}}
-{\href{tel:+918171615670}
-{\textcolor{secondary}{\iconPhone}~+91 8171615670}}
-{\href{https://github.com/dhruvkb}
-{\textcolor{secondary}{\iconGitHub}~/dhruvkb}}
-{\href{https://www.linkedin.com/in/dhruvkb}
-{\textcolor{secondary}{\iconLinkedIn}~/in/dhruvkb}}
+\intro
+  {\href{mailto:dhruvkb@ph.iitr.ac.in}        {\iconEmail~dhruvkb@ph.iitr.ac.in}}
+  {\href{tel:+918171615670}                   {\iconPhone~+91 8171615670}}
+  {\href{https://github.com/dhruvkb}          {\iconGitHub~/dhruvkb}}
+  {\href{https://www.linkedin.com/in/dhruvkb} {\iconLinkedIn~/in/dhruvkb}}
