--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,13 +1,11 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\resumesection{Education}{Education}{\iconGraduationHat}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Education}{\iconGraduationHat}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \timedsubsection
-{IIT Roorkee}% Label
-{\href{https://www.iitr.ac.in/}{Indian Institute of Technology Roorkee}}% Text
-{Bachelor of Technology (B. Tech.)}% Subtext
-{2015 -- 2019}% Time period
-{Engineering Physics}% Attribute#2
-{\iconNetwork}% Icon#2
+  {\href{https://www.iitr.ac.in/}{IIT Roorkee}}
+  {Graduated 2019}
 
-\vspace{-2mm}% To make up for the lack of a section description
+\begin{sectiondescription}
+  Bachelor of Technology (B. Tech.) \hfill Engineering Physics~\iconAtom\\% Line break needed to align icon to right edge
+\end{sectiondescription}
