--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,70 +1,120 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\resumesection{Experience}{Experience}{\iconBriefcase}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Experience}{\iconBriefcase}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\experiencesubsection%
-{Software @ Creative Commons}% Label
-{Software engineer}% Role
-{\href{https://creativecommons.org/}{Creative Commons}}% Organisation
-{April 2019 -- Present}% Time period
-{Google Summer of Code}% Attribute#2
-{\iconGoogle}% Icon#2
+%--------------%
+% BrowserStack %
+%--------------%
 
-\sectiondescription{
+\organisationsubsection
+  {BrowserStack}
+  {Mumbai, IN}
+  {https://www.browserstack.com/}
+
+\rolesubsubsection
+  {Software engineer}
+  {\timeperiod{Feb 2020}}
+
+\begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
-    \item Developed the Vocabulary design system and Vue.js bindings.
-    \item Collaborated in decision-making with design and dev team.
-    \item Identified areas of improvement and spearheaded changes.
-    \item Nurtured an active developer community around the project.
-    \item Initiated and helped Vocabulary integration with CC sites.
-    \item Pushed features and patches to back \& front end of CC Seach.
+    \item Integrated all email providers with the Central Email System.
+    \item Created system to track \& visualise email engagement.
+    \item Built audit logs to prevent \& detect compliance breaches.
   \end{itemize}
-}
+\end{sectiondescription}
 
-\experiencesubsection%
-{Outreachy mentor @ Creative Commons}% Label
-{Outreachy mentor}% Role
-{\href{https://creativecommons.org/}{Creative Commons}}% Organisation
-{November, 2019 -- March, 2020}% Time period
-{Remote}% Attribute#2
-{\iconHome}% Icon#2
+%------------------%
+% Creative Commons %
+%------------------%
 
-\sectiondescription{
+\organisationsubsection[\iconHome]
+  {Creative Commons}
+  {Remote}
+  {https://opensource.creativecommons.org/}
+
+\rolesubsubsection
+  {Open source community coordinator}
+  {\timeperiod{Jul 2020}}
+
+\begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
-    \item Triaged issues and reviewed PRs during application period.
-    \item Helped new contributors identify easier issues to get started.
-    \item Offered code help on Slack and reviewed draft proposals.
-    \item Guided my mentee to gain first-hand FOSS work-experience.
+    \item Identified, organised \& triaged issues \& reviewed PRs.
+    \item Onboarded \& mentored new open source contributors.
+    \item Coordinated, nurtured \& grew the FOSS community.
+    \item Managed the \href{https://twitter.com/cc_opensource}{official Twitter}, increasing subscribers by 20\%.
   \end{itemize}
-}
+\end{sectiondescription}
 
-\onsiteexperiencesubsection%
-{Infrastructure @ HackerEarth}% Label
-{Infrastructure engineer (intern)}% Role
-{\href{https://hackerearth.com/}{HackerEarth}}% Organisation
-{May -- July, 2018}% Time period
-{Bengaluru, India}% Location
+\rolesubsubsection
+  {Open-source mentor}
+  {\timeperiod{Dec 2019}}
 
-\sectiondescription{
-  \begin{itemize}[nosep, leftmargin=*]
+\begin{sectiondescription}
+  \begin{itemize}[nosep, leftmargin = *]
+    \item Onboarded \& guided applicants through the processes.
+    \item Reviewed, scored \& ranked proposals from candidates.
+    \item Mentored in
+    \begin{itemize}[nosep, leftmargin = *, label = {-}]
+      \item \href{https://developers.google.com/season-of-docs}{Google Season of Docs} \hfill \textcolor{secondary}{\timeperiod[Dec 2020]{Sep}}
+      \item \href{https://outreachy.org/}{Outreachy} summer iteration \hfill \textcolor{secondary}{\timeperiod[Aug 2020]{May}}
+      \item \href{https://outreachy.org/}{Outreachy} winter iteration \hfill \textcolor{secondary}{\timeperiod[Mar 2020]{Dec 2019}}
+    \end{itemize}
+  \end{itemize}
+\end{sectiondescription}
+
+\rolesubsubsection
+  {Software engineer}
+  {\timeperiod{Sep 2019}}
+
+\begin{sectiondescription}
+  \begin{itemize}[nosep, leftmargin = *]
+    \item Contributed heavily in Vocabulary's transition to Bulma.
+    \item Collaborated in decision-making with design \& dev teams.
+    \item Identified \& executed major upgrades in the core tech.
+  \end{itemize}
+\end{sectiondescription}
+
+\rolesubsubsection
+  {Google Summer of Code developer}
+  {\timeperiod[Aug 2019]{May}}
+
+\begin{sectiondescription}
+  \begin{itemize}[nosep, leftmargin = *]
+    \item Conceived, designed \& developed Vocabulary from scratch.
+    \item Initiated \& supported Vocabulary integration with CC sites.
+  \end{itemize}
+\end{sectiondescription}
+
+%-------------%
+% HackerEarth %
+%-------------%
+
+\organisationsubsection
+  {HackerEarth}
+  {Bangalore, IN}
+  {https://www.hackerearth.com}
+
+\rolesubsubsection
+  {Infrastructure engineer}
+  {\timeperiod[July 2018]{May}}
+
+\begin{sectiondescription}
+  \begin{itemize}[nosep, leftmargin = *]
     \item Wrote the IaC for the entire production architecture.
     \item Wrote tooling to deploy the IaC in an alternate AWS AZ.
-    \item Wrapped Boto3 in a Python + Django web-environment.
     \item Developed an EC2 instance launch and termination engine.
-    \item Isolated staging and production in separate VPCs.
-    \item Enabled deployment of new staging VPCs in one click.
+    \item Wrapped Boto3 in a Python (Django) web-environment.
+    \item Isolated staging env from production in a separate VPC.
+    \item Enabled one-click VPCs replication in staging environments.
   \end{itemize}
-}
+\end{sectiondescription}
 
-\onsiteexperiencesubsection%
-{Software @ HackerEarth}% Label
-{Software engineer (intern)}% Role
-{\href{https://hackerearth.com/}{HackerEarth}}% Organisation
-{May -- July, 2017}% Time period
-{Bengaluru, India}% Location
+\rolesubsubsection
+  {Software engineer}
+  {\timeperiod[July 2017]{May}}
 
-\sectiondescription{
-  \begin{itemize}[nosep, leftmargin=*]
+\begin{sectiondescription}
+  \begin{itemize}[nosep, leftmargin = *]
     \item Wrote a code-evaluation engine to evaluate Java projects.
     \item Wrote tooling to automatically build and execute projects.
     \item Wrapped Ant in an async message-based Python evaluator.
@@ -72,29 +122,37 @@
     \item Added provider-agnostic database connectivity using JDBC.
     \item Installed security policies such as memory and I/O limits.
   \end{itemize}
-}
+\end{sectiondescription}
 
-\experiencesubsection%
-{CTC @ IMG}% Label
-{Chief technology coordinator}% Role
-{\href{https://img.channeli.in/}{Information Management Group}}% Organisation
-{2016 -- 2019}% Time period
-{IIT Roorkee}% Attribute#2
-{\iconInstitute}% Icon#2
 
-\sectiondescription{
+%-----%
+% IMG %
+%-----%
+
+\organisationsubsection[\iconInstitute]
+  {Information Management Group}
+  {IIT Roorkee}
+  {https://img.channeli.in/}
+
+\begin{sectiondescription}
   Information Management Group (IMG) is the student body that developed, manages
-  and upgrades both the content management system powering the IIT Roorkee
-  website and Channel~i, the official intranet portal.
+  and upgrades both the CMS powering the IIT-R website and Omniport, the
+  official intranet portal.
+\end{sectiondescription}
+
+\rolesubsubsection
+  {Chief technology coordinator}
+  {\timeperiod[2019]{2016}}
+
+\begin{sectiondescription}
   \begin{itemize}[nosep, leftmargin = *]
     \item Pivoted IMG as a group from app to platform development.
-    \item Replaced Channel~i, and its suite of apps, with Omniport.
-    \item Piloted a complete upgrade of the stack and technology.
+    \item Upgraded the legacy portal, stack and apps, with Omniport.
+    \item Containerised, decoupled \& stabilised dev processes.
+    \item Halved timelines by revamping the development paradigm.
     \item Mentored a team of over 50 developers and designers.
-    \item Halved timelines by replacing the development paradigm.
-    \item Containerised and isolated the development process.
     \item Fostered OSS culture with a record 30 repos open-sourced.
-    \item Lead IMG to 10 and 13 GSoC selections in 2018 and 2019.
-    \item Reinvigorated IMG's popular image on social media.
+    \item Led IMG to 10 and 13 GSoC selections in 2018 and 2019.
+    \item Reinvigorated IMG's popular image on various social media.
   \end{itemize}
-}
+\end{sectiondescription}
