--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,34 +1,10 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\resumesection{Skills}{Skills}{\iconLightbulb}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resumesection{Other skills}{\iconRocket}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\resumeonesubsection
-{Computer languages (+frameworks)}
-{Computer languages (+frameworks):}
-\sectiondescription
-{
-reStructuredText (+Sphinx),
-Python (+Django, Django REST Framework),
-Java (+Swing, JavaFX, Ant, Android),
-JavaScript/Node.js (+Storybook, Styleguidist, Jest, Vue, Vuex, Vue Router, React, Angular, GraphQL),
-Kotlin (+Android),
-CSS (+Stylus, Sass),
-Ruby (+Rails), Golang,
-Bash, C++, FORTRAN,
-PHP, HTML, Markdown
-\textit{and, of course,} {\fontfamily{lmr}\selectfont\LaTeX}
-}
-
-\resumeonesubsection
-{Computer software}
-{Computer software:}
-\sectiondescription
-{
-Git,
-Docker (+Compose),
-Ansible, Puppet, UFW,
-Travis, Sentry,
-NGINX, httpd, Celery, RabbitMQ, SQL \& NoSQL databases,
-iPython, Jupyter, NumPy, SymPy, MathWorks MATLAB,
-GIMP, Inkscape, Adobe Creative Cloud
-}
+\begin{sectiondescription}
+  Java (+Swing, JavaFX, Ant, Android),
+  Kotlin (+Android)
+  Ruby (+Rails), Golang,
+  C++, FORTRAN, PHP \textit{and, of course,} Bash
+\end{sectiondescription}
