Fix typo in the phrase 'Design system'

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -17,7 +17,7 @@
 \end{sectiondescription}
 
 \projectsubsubsection
-  {Design systvem}
+  {Design system}
   {JavaScript (Sass; Vue; Storybook)}
 
 \begin{sectiondescription}
